First sceneario working: Crear un nuevo plan. Add steps definitions and Faraday gem for testing

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,3 +28,6 @@ RSpec/MultipleExpectations:
   Max: 3
 RSpec/InstanceVariable:
   Enabled: false
+AllCops:
+ Exclude:
+   - 'features/support/env.rb'
