agregado foreign_key plan id de planes a afiliado, cambio nombre plan_id

--- a/health-api.yaml
+++ b/health-api.yaml
@@ -100,7 +100,7 @@ definitions:
         $ref: '#/definitions/Id'
       name:
         type: string
-      id_plan:
+      plan_id:
         type: integer
       id_telegram:
         type: string  
