Fix in API spec

--- a/health-api.yaml
+++ b/health-api.yaml
@@ -179,7 +179,7 @@ definitions:
     properties:
       id:
         $ref: '#/definitions/Id'
-      nonmbre:
+      nombre:
         type: string
       costo:
         type: integer
