--- a/health-api.yaml
+++ b/health-api.yaml
@@ -178,6 +178,25 @@ paths:
             properties:
               prestacion:
                 $ref: '#/definitions/Prestacion'
+
+  /prestaciones/{prestacion_id}/centros:
+    parameters:
+    - name: prestacion_id
+      in: path
+      type: string
+      description: "id de la Prestacion"
+      required: true
+    get:
+      description: "Obtener todos los centros donde se atiende la prestaciones"
+      responses:
+        200:
+          description: "Todos los centros"
+          schema:
+            properties:
+              prestaciones:
+                items:
+                  $ref: '#/definitions/Centro'
+
   /afiliados:
     get:
       description: "Obtener todos los afiliados"
