--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,6 +31,8 @@ RSpec/InstanceVariable:
 AllCops:
  Exclude:
    - 'features/support/env.rb'
+   - 'spec/spec_helper.rb'
+   - 'spec/integration_spec_helper.rb'
 Layout/EndOfLine:
   Enabled: false
 Lint/Debugger:
