--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,6 +33,7 @@ AllCops:
    - 'features/support/env.rb'
    - 'spec/spec_helper.rb'
    - 'spec/integration_spec_helper.rb'
+   - 'spec/web_mock.rb'
 Layout/EndOfLine:
   Enabled: false
 Lint/Debugger:
